[gd_scene load_steps=2 format=3 uid="uid://bs0vwpytqly5j"]

[ext_resource type="Script" path="res://scripts/EnemySpawner.gd" id="1_vj54d"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_vj54d")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPos_01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1327, 29)

[node name="SpawnPos_02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1327, 154)

[node name="SpawnPos_03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1327, 279)

[node name="SpawnPos_04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1327, 404)

[node name="SpawnPos_05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1327, 529)

[node name="SpawnPos_06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1327, 654)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
